# hear-music

./: .gitignore  README.md  hear-music.cmd  install.ps1  pyproject.toml
docs/: product-spec.md
hear_music/: __main__.py  analysis.py  cli.py  visualization.py
skills/hear-music/: SKILL.md
skills/hear-music/agents/: openai.yaml
